--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ footer {
 
     .logo {
         width: 180px;
+        padding-left: 0;
     }
 
     h1 {
@@ -157,7 +158,7 @@ footer {
     }
     .Sideheading{
         padding: 40px 0px 0px 0px;
-        font-size: 35px;
+        font-size: 25px;
         text-align: center;
     }
     h3,h4{
@@ -199,7 +200,6 @@ footer {
     .space-between {
         align-items: center; 
         justify-content: space-between;
-        /* padding-right: 12px; */
         padding: 0px 10px 0px 12px;
     }
 
@@ -209,11 +209,10 @@ footer {
 
     .footer {
         padding: 20px; 
-        
-        /* text-align: right; */
     }
     h2{
         text-align: center;
+        font-size: xx-large;
     }
     .footer>p{
         text-align: right;
@@ -231,7 +230,6 @@ footer {
    
     #Footertext {
         font-size: 14px;
-        /* padding-right: 4px;   */
         color: white;
     }
 }
