--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,9 @@ h1 {
     padding: 5px;
     font-family: 'Rubik', sans-serif;
 }
+.icon:hover , .cart:hover   {
+    cursor: pointer;
+}
 .icon img{
     width: 20px;
 }
